Fixed scrollbar corner

--- a/app/stylesheets/partials/_scrollbars.sass
+++ b/app/stylesheets/partials/_scrollbars.sass
@@ -28,6 +28,9 @@
   ::-webkit-scrollbar-track-piece:horizontal:increment
     border-width: 0 16px 0 0
 
+  ::-webkit-scrollbar-corner
+    display: none
+
   &.light
     ::-webkit-scrollbar-track-piece:horizontal:increment, ::-webkit-scrollbar-track-piece:horizontal:decrement
       -webkit-border-image: url(/images/scroll/horizontal_track_light.png) 0 16 0 16
